--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,17 @@
+body {
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 #babylon-canvas {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  /* height: 100vh; */
 }
