--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
 .App {
   font-family: sans-serif;
   text-align: center;
-  height: 100vh;
+  /* height: 100vh; */
   overflow-y: hidden;
 }
 
